--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DB_HOST=
-DB_USER=
-DB_PORT=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST='127.0.0.1'
+DB_USER='root'
+DB_PORT='3306'
+DB_PASSWORD='not a pancake'
+DB_NAME='BH-DB-01'
 API_KEY=
